inheritance and universal selector

--- a/03-CSS-Fundamentals/style.css
+++ b/03-CSS-Fundamentals/style.css
@@ -1,11 +1,12 @@
-h1,
-h2,
-h3,
-h4,
-p,
-li {
-	font-family: sans-serif;
+* {
+	border-top: 10px solid #1d05f3d7;
+}
+
+body {
 	color: #444;
+	font-family: sans-serif;
+
+	border-top: 10px solid #1d05f3d7;
 }
 
 h1,
@@ -147,3 +148,7 @@ a:active {
 footer p {
 	color: green !important;
 } */
+
+nav {
+	font-size: 18px;
+}
