using margins and paddings

--- a/03-CSS-Fundamentals/style.css
+++ b/03-CSS-Fundamentals/style.css
@@ -1,5 +1,7 @@
 * {
-	border-top: 10px solid #1d05f3d7;
+	/* border-top: 10px solid #1d05f3d7; */
+	margin: 0;
+	padding: 0;
 }
 
 body {
@@ -7,6 +9,32 @@ body {
 	font-family: sans-serif;
 
 	border-top: 10px solid #1d05f3d7;
+}
+
+.main-header {
+	background-color: #d4d4d4;
+	/* padding: 20px; */
+	padding: 20px 40px;
+	margin-bottom: 60px;
+}
+
+nav {
+	font-size: 18px;
+}
+
+article {
+	margin-bottom: 60px;
+}
+
+.post-header {
+	margin-bottom: 40px;
+}
+
+aside {
+	background-color: #d4d4d4;
+	border-top: 5px solid #1d05f3d7;
+	border-bottom: 5px solid #1d05f3d7;
+	padding: 50px 0;
 }
 
 h1,
@@ -24,10 +52,13 @@ h1 {
 
 h2 {
 	font-size: 40px;
+	margin-bottom: 30px;
 }
 
 h3 {
 	font-size: 30px;
+	margin-bottom: 20px;
+	margin-top: 40px;
 }
 
 h4 {
@@ -39,12 +70,22 @@ h4 {
 
 p {
 	font-size: 22px;
-
 	line-height: 1.5;
+	margin-bottom: 15px;
+}
+
+ul, ol {
+margin-left: 50px;
+margin-bottom: 20px;
 }
 
 li {
 	font-size: 20px;
+	margin-bottom: 10px;
+}
+
+li:last-child {
+	margin-bottom: 0;
 }
 
 /* footer p {
@@ -71,16 +112,6 @@ li {
 
 .related-post {
 	list-style: none;
-}
-
-.main-header {
-	background-color: #d4d4d4;
-}
-
-aside {
-	background-color: #d4d4d4;
-	border-top: 5px solid #1d05f3d7;
-	border-bottom: 5px solid #1d05f3d7;
 }
 
 /* body {
@@ -149,6 +180,3 @@ footer p {
 	color: green !important;
 } */
 
-nav {
-	font-size: 18px;
-}
